# mpyc.stubs

./: CITATION.cff  README.md  setup.cfg
src/tno/mpc/mpyc/stubs/: runtime.pyi
