[metadata]
name = tno.mpc.mpyc.stubs
author = TNO MPC Lab
author_email = mpclab@tno.nl
maintainer = TNO MPC Lab
maintainer_email = mpclab@tno.nl
description = Partial stubs for use with the MPyC library
classifiers =
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python :: 3
   Operating System :: OS Independent
   Intended Audience :: Developers
   Typing :: Typed
license = Apache License, Version 2.0
license_file = LICENSE
platform = any
python_requires = >=3.7
keywords =
    TNO
    MPC
    multi-party computation
    MPyC
    stubs
url = https://mpc.tno.nl/
download_url = https://pypi.org/project/tno.mpc.mpyc.stubs/#files
project_urls =
    Source Code = https://github.com/TNO-MPC/mpyc.stubs
version = attr: tno.mpc.mpyc.stubs.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages =
    mpyc-stubs
    tno.mpc.mpyc.stubs
package_dir =
    mpyc-stubs = tno/mpc/mpyc/stubs
zip_safe = False
install_requires =
    mpyc >= 0.7.8, < 0.9.0

[options.package_data]
* =
    py.typed
    *.pyi
